--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -1,5 +1,6 @@
 .team {
-    @apply mt-5;
+    @apply mt-10;
+
     .topic-header {
         p {
             @apply w-fit;
@@ -7,23 +8,22 @@
     }
 
     .team-content {
-        @apply mt-0 flex flex-wrap justify-around gap-10 mt-10;
+        @apply flex flex-wrap justify-around gap-10 mt-10;
 
         .team-content-item {
-            @apply flex flex-col;
+            @apply flex flex-col border-dark;
             flex: 1 1 380px;
             max-width: 500px;
-            height: 331px;
             border-radius: 45px;
-            padding: 40px 35px 40px 35px;
-            border-width: 1px 1px 5px 1px;
-            border-color: black;
+            padding: 40px 35px;
+            border-width: 1px;
+            border-bottom-width: 5px;
 
             .team-content-item-header {
-                @apply flex;
+                @apply flex gap-5;
 
                 .team-content-item-header-right {
-                    @apply flex flex-col w-full justify-between ml-5;
+                    @apply flex flex-col w-full justify-between;
 
                     .team-content-item-name {
                         @apply flex flex-col justify-end;
@@ -41,19 +41,20 @@
             }
         }
     }
+
     .team-content-button-container {
         @apply mt-10 flex justify-end;
         
         button {
-            @apply bg-black text-white py-5 px-9 w-full;
-            border-radius: 14px;
+            @apply bg-black text-white w-full;
         }
     }
 }
 
 @screen lg {
     .team {
-        @apply mt-5;
+        @apply mt-20;
+
         .topic-header {
             p {
                 width: 473px;
@@ -61,32 +62,12 @@
         }
     
         .team-content {
-            @apply mt-10 flex flex-wrap justify-between;
-            .team-content-item {
-                .team-content-item-header {
-                    @apply flex;
-    
-                    .team-content-item-header-right {
-                        @apply flex flex-col justify-between ml-5;
-    
-                        .team-content-item-name {
-                            @apply flex flex-col justify-end;
-                        }
-        
-                        img {
-                            @apply self-end;
-                        }
-                    }
-                }
-            }
+            @apply justify-between;
         }
+
         .team-content-button-container {
-            @apply mt-10 flex justify-end;
-            
             button {
-                @apply bg-black text-white py-5 px-9;
                 width: 269px;
-                border-radius: 14px;
             }
         }
     }
