--- a/src/components/contact-us/contact-us.scss
+++ b/src/components/contact-us/contact-us.scss
@@ -24,7 +24,7 @@
                     @apply flex w-fit;
 
                     input {
-                        @apply w-7 h-7 mr-3 bg-green-600;
+                        @apply w-7 h-7 mr-3 bg-green;
                     }
 
                     label {
@@ -102,17 +102,7 @@
             .contact-form {
                 @apply flex flex-col w-full mr-auto;
                 max-width: 560px;
-    
-                .radio-container {
-                    @apply flex align-middle;
-    
-                    input {
-                        @apply w-7 h-7 mr-3 bg-green-600;
-                    }
-                    label {
-                        @apply mr-8 self-center;
-                    }
-                }
+
                 .text-input {
                     @apply flex flex-col mt-5;
                     
