--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,5 +1,5 @@
 .testimonials {
-    @apply mt-12;
+    @apply mt-10;
     
     .topic-header {
         p {
@@ -8,47 +8,46 @@
     }
 
     .testimonials-content {
-        @apply mt-12 text-white w-full pt-20 pb-12 overflow-hidden;
+        @apply mt-12 text-white w-full pt-20 pb-12 overflow-hidden bg-dark;
         border-radius: 45px;
-        background-color: #191A23;
+        padding: 30px 30px 60px 30px;
+
         .carousel-content {
-            @apply flex relative;
-            z-index: 3;
-            left: -662px;
+            @apply flex;
+
             .carousel-item {
                 @apply flex flex-col w-fit mx-7;
+
                 .comment-container {
-                    width: 606px;
-                    height: 266px;
-    
-                    img {
-                        @apply absolute;
-                        z-index: 1;
-                    }
-                    .text-container {
-                        @apply absolute flex justify-center;
-                        width: 606px;
-                        height: 237px;
-                        z-index: 2;
-    
-                        p {
-                            @apply self-center;
-                            width: 532px;
-                        }
+                    @apply border-green;
+                    border-width: 2px;
+                    border-radius: 45px;
+                    padding: 30px;
+
+                    p {
+                        @apply self-center;
+                        width: 270px;
                     }
                 }
+
                 .comentator-name-content {
                     @apply self-start mt-5;
-                    margin-left: 80px;
+                    margin-left: 60px;
+
                     .comentator-name {
-                        color: #B9FF66;
+                        @apply text-green;
                     }
                 }
             }
         }
+
         .carousel-switcher {
-            @apply flex justify-center m-auto mt-20; 
+            @apply flex justify-center m-auto mt-20;
             max-width: 564px;
+
+            button {
+                @apply p-0;
+            }
 
             .arrow-left {
                 @apply mr-auto;
@@ -67,68 +66,11 @@
 
 @screen lg {
     .testimonials {
-        @apply mt-12;
+        @apply mt-20;
         
         .topic-header {
             p {
                 width: 450px;
-            }
-        }
-    
-        .testimonials-content {
-            @apply mt-12  text-white w-full pt-20 pb-12 overflow-hidden;
-            border-radius: 45px;
-            background-color: #191A23;
-            .carousel-content {
-                @apply flex relative;
-                z-index: 3;
-                left: -662px;
-                .carousel-item {
-                    @apply flex flex-col w-fit mx-7;
-                    .comment-container {
-                        width: 606px;
-                        height: 266px;
-        
-                        img {
-                            @apply absolute;
-                            z-index: 1;
-                        }
-                        .text-container {
-                            @apply absolute flex justify-center;
-                            width: 606px;
-                            height: 237px;
-                            z-index: 2;
-        
-                            p {
-                                @apply self-center;
-                                width: 532px;
-                            }
-                        }
-                    }
-                    .comentator-name-content {
-                        @apply self-start mt-5;
-                        margin-left: 80px;
-                        .comentator-name {
-                            color: #B9FF66;
-                        }
-                    }
-                }
-            }
-            .carousel-switcher {
-                @apply flex justify-center m-auto mt-20; 
-                max-width: 564px;
-    
-                .arrow-left {
-                    @apply mr-auto;
-                }
-    
-                .carousel-point {
-                    @apply mx-3;
-                }
-    
-                .arrow-right {
-                    @apply ml-auto;
-                }
             }
         }
     }
